--- a/PC_Configurator/App.xaml
+++ b/PC_Configurator/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:PC_Configurator"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="dictionaries/Styles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
