Product selection logic created

--- a/PC_Configurator/MainWindow.xaml
+++ b/PC_Configurator/MainWindow.xaml
@@ -29,16 +29,16 @@
             </Grid.ColumnDefinitions>
 
 
-            <Label Content="Cpu" Grid.Column="0" Style="{DynamicResource CategoryLabel}"/>
-            <Label Content="Gpu" Grid.Column="1" Style="{DynamicResource CheckedCategoryLabel}" MouseLeftButtonUp="UIElement_OnMouseLeftButtonUp"/>
-            <Label Content="Ram" Grid.Column="2" Style="{DynamicResource CategoryLabel}"/>
-            <Label Content="Motherboard" Grid.Column="3" Style="{DynamicResource CategoryLabel}"/>
-            <Label Content="Power supply" Grid.Column="4" Style="{DynamicResource CategoryLabel}"/>
-            <Label Content="SSD" Grid.Column="5" Style="{DynamicResource CategoryLabel}"/>
-            <Label Content="HDD" Grid.Column="6" Style="{DynamicResource CategoryLabel}"/>
-            <Label Content="Case" Grid.Column="7" Style="{DynamicResource CategoryLabel}"/>
+            <Label x:Name="CpuLabel" Content="Cpu" Grid.Column="0" Style="{DynamicResource CategoryLabel}"/>
+            <Label x:Name="GpuLabel" Content="Gpu" Grid.Column="1" Style="{DynamicResource CategoryLabel}" MouseLeftButtonUp="UIElement_OnMouseLeftButtonUp"/>
+            <Label x:Name="RamLabel" Content="Ram" Grid.Column="2" Style="{DynamicResource CategoryLabel}"/>
+            <Label x:Name="MotherboardLabel" Content="Motherboard" Grid.Column="3" Style="{DynamicResource CategoryLabel}"/>
+            <Label x:Name="PowerSupplyLabel" Content="Power supply" Grid.Column="4" Style="{DynamicResource CategoryLabel}"/>
+            <Label x:Name="SSDLabel" Content="SSD" Grid.Column="5" Style="{DynamicResource CategoryLabel}"/>
+            <Label x:Name="HDDLabel" Content="HDD" Grid.Column="6" Style="{DynamicResource CategoryLabel}"/>
+            <Label x:Name="CaseLabel" Content="Case" Grid.Column="7" Style="{DynamicResource CategoryLabel}"/>
             <Border Grid.Column="8" Style="{DynamicResource SubmitButton}" MouseLeftButtonUp="ViewCurrentConfiguration">
-                <Label Content="ViewCurrentConfiguration"  FontSize="20" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Margin="0 0 0 6"/>
+                <Label Content="Save"  FontSize="20" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Margin="0 0 0 6"/>
             </Border>
         </Grid>
 
