--- a/PC_Configurator/dictionaries/Styles.xaml
+++ b/PC_Configurator/dictionaries/Styles.xaml
@@ -23,4 +23,25 @@
         <Setter Property="Margin" Value="10 0 10 0"/>
         <Setter Property="CornerRadius" Value="15"/>
     </Style>
+
+    <Style x:Key="ProductBorder" TargetType="{x:Type Border}">
+        <Setter Property="Background" Value="#f5f8e7"/>
+        <Setter Property="BorderBrush" Value="#e3e3e3"></Setter>
+        <Setter Property="BorderThickness" Value="2"></Setter>
+        <Setter Property="CornerRadius" Value="3"/>
+        <Setter Property="MinWidth" Value="500"/>
+    </Style>
+    <Style x:Key="ProductStackPanel" TargetType="{x:Type StackPanel}">
+        <Setter Property="Orientation" Value="Horizontal"></Setter>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+    </Style>
+    <Style x:Key="ProductLabel" TargetType="{x:Type Label}">
+        <Setter Property="FontWeight" Value="Bold"></Setter>
+        <Setter Property="FontSize" Value="20"></Setter>
+    </Style>
+    <Style x:Key="ProductValue" TargetType="{x:Type Label}">
+        <Setter Property="FontWeight" Value="Bold"></Setter>
+        <Setter Property="FontSize" Value="20"></Setter>
+        <Setter Property="Foreground" Value="#94b80a"/>
+    </Style>
 </ResourceDictionary>
