Congiguration view Created

--- a/PC_Configurator/views/CpuSelectionPage.xaml
+++ b/PC_Configurator/views/CpuSelectionPage.xaml
@@ -18,7 +18,7 @@
                                 <StackPanel>
                                     <StackPanel Style="{DynamicResource ProductStackPanel}">
                                         <Label Style="{DynamicResource ProductLabel}">Producer:</Label>
-                                        <Label x:Name="GpuId" Style="{DynamicResource ProductValue}" Content="{Binding ProcessorFamily}"></Label>
+                                        <Label x:Name="GpuId" Style="{DynamicResource ProductValue}" Content="{Binding Producer}"></Label>
                                     </StackPanel>
                                     <StackPanel Style="{DynamicResource ProductStackPanel}">
                                         <Label Style="{DynamicResource ProductLabel}">Line:</Label>
