--- a/PC_Configurator/dictionaries/Styles.xaml
+++ b/PC_Configurator/dictionaries/Styles.xaml
@@ -23,7 +23,6 @@
         <Setter Property="Margin" Value="10 0 10 0"/>
         <Setter Property="CornerRadius" Value="15"/>
     </Style>
-
     <Style x:Key="ProductBorder" TargetType="{x:Type Border}">
         <Setter Property="Background" Value="#f5f8e7"/>
         <Setter Property="BorderBrush" Value="#e3e3e3"></Setter>
@@ -43,5 +42,30 @@
         <Setter Property="FontWeight" Value="Bold"></Setter>
         <Setter Property="FontSize" Value="20"></Setter>
         <Setter Property="Foreground" Value="#94b80a"/>
+    </Style>
+
+    <Style x:Key="ConfigurationPageProductGrid" TargetType="{x:Type Grid}">
+       
+    </Style>
+    <Style x:Key="ConfigurationPageProductLabel" TargetType="{x:Type Label}">
+        <Setter Property="Background" Value="#f5f8e7"/>
+        <Setter Property="FontWeight" Value="Bold"></Setter>
+        <Setter Property="FontSize" Value="32"></Setter>
+        <Setter Property="Width" Value="200"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="Padding" Value="0 0 0 15"/>
+    </Style>
+    <Style x:Key="ConfigurationPageProductBorder" TargetType="{x:Type Border}">
+        <Setter Property="CornerRadius" Value="5"/>
+        <Setter Property="BorderBrush" Value="#94b80a"/>
+        <Setter Property="BorderThickness" Value="3"/>
+        <Setter Property="Margin" Value="0 20 0 0"/>
+        <Setter Property="MinWidth" Value="600"/>
+        <Setter Property="MaxWidth" Value="1000"/>
+    </Style>
+    <Style x:Key="ConfigurationPageProductInfoStackpanel" TargetType="{x:Type StackPanel}">
+        <Setter Property="Orientation" Value="Horizontal"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
     </Style>
 </ResourceDictionary>
