--- a/PC_Configurator/dictionaries/Styles.xaml
+++ b/PC_Configurator/dictionaries/Styles.xaml
@@ -51,7 +51,7 @@
         <Setter Property="Background" Value="#f5f8e7"/>
         <Setter Property="FontWeight" Value="Bold"></Setter>
         <Setter Property="FontSize" Value="32"></Setter>
-        <Setter Property="Width" Value="200"/>
+        <Setter Property="Width" Value="250"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="Padding" Value="0 0 0 15"/>
@@ -64,8 +64,13 @@
         <Setter Property="MinWidth" Value="600"/>
         <Setter Property="MaxWidth" Value="1000"/>
     </Style>
-    <Style x:Key="ConfigurationPageProductInfoStackpanel" TargetType="{x:Type StackPanel}">
+    <Style x:Key="ConfigurationPageProductInfoStackPanel" TargetType="{x:Type StackPanel}">
         <Setter Property="Orientation" Value="Horizontal"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
+    </Style>
+    <Style x:Key="ConfigurationPageProductListView" TargetType="{x:Type ListView}">
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="Visibility" Value="Visible"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
     </Style>
 </ResourceDictionary>
