--- a/PC_Configurator/views/CaseSelectionPage.xaml
+++ b/PC_Configurator/views/CaseSelectionPage.xaml
@@ -1,15 +1,15 @@
-﻿<Page x:Class="PC_Configurator.views.SsdSelectionPage"
+﻿<Page x:Class="PC_Configurator.views.CaseSelectionPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:PC_Configurator.views"
       mc:Ignorable="d"
-      Title="SsdSelectionPage">
-     <Grid>
+      Title="CaseSelectionPage">
+   <Grid>
         <Border>
             <ScrollViewer VerticalScrollBarVisibility="Hidden">
-                <ListView x:Name="SsdsListView" SelectionChanged="SsdsListView_OnSelectionChanged" HorizontalAlignment="Center" BorderBrush="Transparent">
+                <ListView x:Name="CasesListView" SelectionChanged="CasesListView_OnSelectionChanged" HorizontalAlignment="Center" BorderBrush="Transparent">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <Border Style="{DynamicResource ProductBorder}">
@@ -19,12 +19,12 @@
                                         <Label x:Name="GpuId" Style="{DynamicResource ProductValue}" Content="{Binding Producer}"></Label>
                                     </StackPanel>
                                     <StackPanel Style="{DynamicResource ProductStackPanel}">
-                                        <Label Style="{DynamicResource ProductLabel}">FormFactor:</Label>
-                                        <Label Style="{DynamicResource ProductValue}" Content="{Binding FormFactor}"></Label>
+                                        <Label Style="{DynamicResource ProductLabel}">Size:</Label>
+                                        <Label Style="{DynamicResource ProductValue}" Content="{Binding Size}"></Label>
                                     </StackPanel>
                                     <StackPanel Style="{DynamicResource ProductStackPanel}">
-                                        <Label Style="{DynamicResource ProductLabel}">Power:</Label>
-                                        <Label Style="{DynamicResource ProductValue}" Content="{Binding Power}"></Label>
+                                        <Label Style="{DynamicResource ProductLabel}">MaxMotherboardFormFactor:</Label>
+                                        <Label Style="{DynamicResource ProductValue}" Content="{Binding MaxMotherboardFormFactor}"></Label>
                                     </StackPanel>
                                 </StackPanel>
                             </Border>
