--- a/PC_Configurator/views/HddSelectionPage.xaml
+++ b/PC_Configurator/views/HddSelectionPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:PC_Configurator.views"
       mc:Ignorable="d"
-      Title="HddSelectionPage" Height="450" Width="800">
+      Title="HddSelectionPage">
     <Grid>
         <Border>
             <ScrollViewer VerticalScrollBarVisibility="Hidden">
