--- a/PC_Configurator/views/PowerSupplieSelectionPage.xaml
+++ b/PC_Configurator/views/PowerSupplieSelectionPage.xaml
@@ -1,15 +1,15 @@
-﻿<Page x:Class="PC_Configurator.views.SsdSelectionPage"
+﻿<Page x:Class="PC_Configurator.views.PowerSupplieSelectionPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:PC_Configurator.views"
       mc:Ignorable="d"
-      Title="SsdSelectionPage">
-     <Grid>
+      Title="PowerSupplieSelectionPage">
+   <Grid>
         <Border>
             <ScrollViewer VerticalScrollBarVisibility="Hidden">
-                <ListView x:Name="SsdsListView" SelectionChanged="SsdsListView_OnSelectionChanged" HorizontalAlignment="Center" BorderBrush="Transparent">
+                <ListView x:Name="PowerSuppliesListView" SelectionChanged="PowerSuppliesListView_OnSelectionChanged" HorizontalAlignment="Center" BorderBrush="Transparent">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <Border Style="{DynamicResource ProductBorder}">
@@ -23,8 +23,20 @@
                                         <Label Style="{DynamicResource ProductValue}" Content="{Binding FormFactor}"></Label>
                                     </StackPanel>
                                     <StackPanel Style="{DynamicResource ProductStackPanel}">
-                                        <Label Style="{DynamicResource ProductLabel}">Power:</Label>
-                                        <Label Style="{DynamicResource ProductValue}" Content="{Binding Power}"></Label>
+                                        <Label Style="{DynamicResource ProductLabel}">MemoryCapacity:</Label>
+                                        <Label Style="{DynamicResource ProductValue}" Content="{Binding MemoryCapacity}"></Label>
+                                    </StackPanel>
+                                    <StackPanel Style="{DynamicResource ProductStackPanel}">
+                                        <Label Style="{DynamicResource ProductLabel}">Interface:</Label>
+                                        <Label Style="{DynamicResource ProductValue}" Content="{Binding Interface}"></Label>
+                                    </StackPanel>
+                                    <StackPanel Style="{DynamicResource ProductStackPanel}">
+                                        <Label Style="{DynamicResource ProductLabel}">ReadingSpeed:</Label>
+                                        <Label Style="{DynamicResource ProductValue}" Content="{Binding ReadingSpeed}"></Label>
+                                    </StackPanel>
+                                    <StackPanel Style="{DynamicResource ProductStackPanel}">
+                                        <Label Style="{DynamicResource ProductLabel}">RecordingSpeed:</Label>
+                                        <Label Style="{DynamicResource ProductValue}" Content="{Binding RecordingSpeed}"></Label>
                                     </StackPanel>
                                 </StackPanel>
                             </Border>
